--- a/doc/90100-MacchinaAcknowledgements.page
+++ b/doc/90100-MacchinaAcknowledgements.page
@@ -3,7 +3,7 @@ AAAAMacchinaIO
 
 !!!Introduction
 
-macchina.io incorporates the following open source projects,
+macchina.io EDGE incorporates the following open source projects,
 the use of which is hereby acknowledged.
 
 !!!POCO C++ Libraries
