--- a/doc/00210-MacchinaCppProgramming.page
+++ b/doc/00210-MacchinaCppProgramming.page
@@ -1,31 +1,31 @@
-macchina.io C++ Programming Guide
+macchina.io EDGE C++ Programming Guide
 AAAAMacchinaIO
 
 !!!Introduction
 
-The macchina.io C++ programming environment gives you full access
-to all features and APIs provided by macchina.io. macchina.io is itself
+The macchina.io EDGE C++ programming environment gives you full access
+to all features and APIs provided by macchina.io EDGE. macchina.io EDGE is itself
 written in C++, except for some parts of the web user interface. Therefore,
-some macchina.io features and APIs are only accessible to developers writing
+some macchina.io EDGE features and APIs are only accessible to developers writing
 C++ code. Services, network protocols and device/sensor bindings generally must
 be written in C++.
 
-This document will introduce you to C++ programming in the macchina.io environment.
+This document will introduce you to C++ programming in the macchina.io EDGE environment.
 Familiarity with C++ (C++11) and basic Linux/Unix programming with GCC (or Clang)
 and GNU Make is expected.
 
 
 !!Bundles
 
-macchina.io is completely implemented in a modular, plug-in based architecture,
+macchina.io EDGE is completely implemented in a modular, plug-in based architecture,
 using a C++ framework named <*Open Service Platform*> (OSP).
-Therefore, virtually all code that runs within macchina.io comes from a plug-in,
-or <*bundle*>, as it's called in OSP and macchina.io. The only exception is the quite
+Therefore, virtually all code that runs within macchina.io EDGE comes from a plug-in,
+or <*bundle*>, as it's called in OSP and macchina.io EDGE. The only exception is the quite
 minimal <*server*> application. It's purpose is to load configuration data from
 a set of configuration files and to initialize the bundle loading framework.
 
 For a more detailed introduction to the OSP framework, which is the foundation
-of macchina.io, please read the [[00100-OSPOverview.html OSP Overview]] and
+of macchina.io EDGE, please read the [[00100-OSPOverview.html OSP Overview]] and
 [[00150-OSPTutorial.html Tutorial]].
 
 A [[00200-OSPBundles.html Bundle]] is basically a directory with a certain structure, or,
@@ -47,25 +47,25 @@ in to.
 !!Services
 
 Given only bundle activators and extension points, it would be very hard for different
-bundles to work together. Therefore, OSP and macchina.io also have <*services*>.
+bundles to work together. Therefore, OSP and macchina.io EDGE also have <*services*>.
 Services are C++ objects that are registered with a central
 [[00300-OSPServiceRegistry.html Service Registry]].
 Each bundle can register an arbitrary number of services it provides itself with the
 service registry, and can also find services provided by other bundles via the
-service registry. In macchina.io, every sensor, device or communication protocol is
+service registry. In macchina.io EDGE, every sensor, device or communication protocol is
 implemented as a service.
 
 
 !!!Prerequisites
 
-The following tutorial assumes the you've already retrieved the macchina.io sources from
-its Git repository and built macchina.io for your host system, according to the
+The following tutorial assumes the you've already retrieved the macchina.io EDGE sources from
+its Git repository and built macchina.io EDGE for your host system, according to the
 instructions in the [[00150-MacchinaGettingStarted.html Getting Started]] document.
 
 To keep things simple for now, only the build steps for the host system will be shown.
 We assume that your host system is either a Linux or a macOS system.
 
-macchina.io heavily uses the [[https://pocoproject.org POCO C++ Libraries]].
+macchina.io EDGE heavily uses the [[https://pocoproject.org POCO C++ Libraries]].
 The POCO C++ Libraries are also used in the sample code shown in this tutorial.
 If you are not familiar with them, please refer to the
 [[https://pocoproject.org/documentation.html introductory slides]]
@@ -75,7 +75,7 @@ for a quick overview.
 !!!Writing Your First Bundle in C++
 
 The following sections will guide you through the steps of creating your first
-bundle for macchina.io. This simple bundle will just provide a minimal bundle activator
+bundle for macchina.io EDGE. This simple bundle will just provide a minimal bundle activator
 that prints a "Hello, world!" message to the log.
 
 Every bundle containing C++ code must have at the minimum the following items:
@@ -97,7 +97,7 @@ A minimal directory hierarchy for a C++ bundle looks like this:
 ----
 
 Note that this directory layout (specifically, the placement of the C++ source file
-<*BundleActivator.cpp*> in the <[src]> folder) is only mandatory if you use macchina.io's
+<*BundleActivator.cpp*> in the <[src]> folder) is only mandatory if you use macchina.io EDGE's
 GNU Make-based build system. If you use a different build system, you are free to arrange
 files however you like (or however your build system expects it).
 
@@ -124,7 +124,7 @@ tool:
     include $(POCO_BASE)/build/rules/dylib
 ----
 
-This Makefile uses the macchina.io C++ build system which is taken from the
+This Makefile uses the macchina.io EDGE C++ build system which is taken from the
 [[99150-GMakeBuildNotes.html POCO C++ Libraries]],
 so the first thing it does is include global definitions.
 Furthermore, it will invoke the <*BundleCreator*> tool, so it also includes some
@@ -185,7 +185,7 @@ for the sample bundle is shown in the following.
 
 The file first defines the human-readable name of the bundle ("HelloBundle Sample") and
 the symbolic name ("io.macchina.samples.hello"), which must be unique for all bundles in a
-macchina.io instance.
+macchina.io EDGE instance.
 
 The symbolic name of a bundle must conform to certain conventions. Symbolic names must be unique
 across different vendors. To ensure this, the bundle symbolic name employs the reverse domain
@@ -284,16 +284,16 @@ specification file under the <*<activator>/<class>*> element.
 In order to build the bundle with GNU Make, two environment variables must be
 defined.
 
-  - <[$PROJECT_BASE]> must contain the path to the macchina.io root directory (the one
+  - <[$PROJECT_BASE]> must contain the path to the macchina.io EDGE root directory (the one
     containing the <*platform*>, <*launcher*>, <*protocols*>, etc. directories).
   - <[$POCO_BASE]> must contain the path to the <*platform*> directory inside the
-    macchina.io root directory. Setting it to <[$PROJECT_BASE/platform]> is recommended.
+    macchina.io EDGE root directory. Setting it to <[$PROJECT_BASE/platform]> is recommended.
 
-There is a Bash script named <*env.bash*> in the macchina.io root directory that
+There is a Bash script named <*env.bash*> in the macchina.io EDGE root directory that
 you can <*source*> in order to set these and a few other useful environment variables:
 
     $ . env.bash
-    macchina.io build environment set.
+    macchina.io EDGE build environment set.
 
     $MACCHINA_BASE     = /home/user/macchina.io
     $PROJECT_BASE      = /home/user/macchina.io
@@ -388,27 +388,27 @@ specification file, as well as some additional items.
 
 !!Running the Bundle
 
-To run the bundle, simply start (or restart) the macchina.io server application.
+To run the bundle, simply start (or restart) the macchina.io EDGE server application.
 The <*samples/bundles*> directory is part of the default search path for bundles,
 so it will automatically pick up the new bundle at startup.
 
-Alternatively, the bundle can also be deployed to a running macchina.io instance
+Alternatively, the bundle can also be deployed to a running macchina.io EDGE instance
 using the <*Bundles*> app in the web interface.
 Simply open the <*Bundles*> app, click on <*Install*> and drag the bundle file
 into your web browser window and drop it into the indicated area.
 This will only work if the bundle has not already been loaded. In that case you
-will see an error message in the browser and the macchina.io log output or console.
+will see an error message in the browser and the macchina.io EDGE log output or console.
 
 After manually installing the bundle you have to start it as well by clicking
 the <*Start*> item in the bundle actions bar.
 
-If successfully started, the bundle will print a message to the macchina.io log
+If successfully started, the bundle will print a message to the macchina.io EDGE log
 output or console.
 
     2018-02-20 15:21:34.289 [Information] osp.bundle.io.macchina.samples.hello<0>: Hello, world!
 ----
 
-Similarly, when you stop the bundle, either by stopping the entire macchina.io server or
+Similarly, when you stop the bundle, either by stopping the entire macchina.io EDGE server or
 by stopping only the bundle in the <*Bundles*> app, you will see its goodbye message:
 
     2018-02-20 15:22:37.991 [Information] osp.bundle.io.macchina.samples.hello<0>: Goodbye!
@@ -417,9 +417,9 @@ by stopping only the bundle in the <*Bundles*> app, you will see its goodbye mes
 
 !!Debugging the Bundle
 
-To debug your new bundle, you will need to run the macchina.io server under the
+To debug your new bundle, you will need to run the macchina.io EDGE server under the
 debugger (GDB or LLDB). Make sure that the bundle contains dynamic libraries with
-debug information, and that you start the debug executable of the macchina.io server.
+debug information, and that you start the debug executable of the macchina.io EDGE server.
 
 Assuming you are currently in the <*samples/HelloBundle*> directory, start GDB with:
 
@@ -452,7 +452,7 @@ Although the bundle has not been loaded, you can still set a breakpoint in its
     (gdb)
 ----
 
-Then, simply run the macchina.io server. It will hit the breakpoint as soon as it
+Then, simply run the macchina.io EDGE server. It will hit the breakpoint as soon as it
 attempts to start the bundle.
 
     (gdb) run
@@ -488,15 +488,15 @@ the dynamic linker may get confused and call the wrong bundle activator start() 
 
 !!!Services, Sensors and Devices
 
-Besides bundles, services are the second main concept in macchina.io and the underlying
-Open Service Platform framework. Virtually every macchina.io feature is exposed as a
+Besides bundles, services are the second main concept in macchina.io EDGE and the underlying
+Open Service Platform framework. Virtually every macchina.io EDGE feature is exposed as a
 service that can be found via the [[00300-OSPServiceRegistry.html Service Registry]].
 This includes sensors, devices and network protocols.
 
 
 !!Two Kinds of Services
 
-There are two kinds of services in macchina.io. The first kind are implemented as
+There are two kinds of services in macchina.io EDGE. The first kind are implemented as
 ordinary C++ classes, derived from Poco::OSP::Service. These are easy to implement but
 have the disadvantage that such services can only be used by C++ code. Using these services
 from JavaScript code is impossible. While they will be visible via the service registry,
@@ -511,7 +511,7 @@ Remoting-based bridging mechanism. Note that even if there's the Remoting framew
 involved, no actual network or socket communication happens during JavaScript
 bridging. Only the dynamic dispatching and serialization mechanisms from Remoting are used.
 
-Virtually all macchina.io services are implemented using the Remoting framework and are
+Virtually all macchina.io EDGE services are implemented using the Remoting framework and are
 thus available from both C++ and JavaScript.
 Some [[00350-OSPStandardServices.html OSP core services]], however, are only
 available to C++ code.
@@ -521,7 +521,7 @@ available to C++ code.
 
 Services are discovered via the central [[00300-OSPServiceRegistry.html Service Registry]].
 Services can be found either by name, or by their properties. Some services have
-well-known names, specifically the OSP core services. Most macchina.io services,
+well-known names, specifically the OSP core services. Most macchina.io EDGE services,
 however, should be found via their properties, to prevent coupling your code
 to a specific service implementation.
 
@@ -542,7 +542,7 @@ obtained by calling the Poco::OSP::ServiceRef::castedInstance() method.
 
 The following sample implements a bundle that uses the service registry to find
 temperature sensor services, print out their properties, and read the current
-temperature from each sensor. macchina.io comes with the capability to simulate
+temperature from each sensor. macchina.io EDGE comes with the capability to simulate
 simple sensors, and the default configuration file defines a couple of simulated
 temperature sensors, which can be used for testing.
 
@@ -576,7 +576,7 @@ The Makefile looks similar to the one for the HelloBundle sample, with a few add
     include $(POCO_BASE)/build/rules/dylib
 ----
 
-First, we need to add a header search path for the macchina.io <*IoTDevices*> library, which
+First, we need to add a header search path for the macchina.io EDGE <*IoTDevices*> library, which
 contains the interface definitions for working with sensors and other devices.
 This is done using the <[target_includes]> variable.
 Second, we also need to add the <*IoTDevices*> library to the list of libraries linked
@@ -669,7 +669,7 @@ Here is the source code for the bundle activator:
 
 In the BundleActivator's <[start()]> method, we first look for all services that
 have a property named "io.macchina.physicalQuantity" with a value of "temperature".
-By convention in macchina.io, all sensor services for a sensor that measures a physical
+By convention in macchina.io EDGE, all sensor services for a sensor that measures a physical
 quantity expose this property.
 We receive a vector of sensor references (<[std::vector<Poco::OSP::SensorRef::Ptr>]>), which
 we then iterate through. For each sensor we print out its service name and its properties.
@@ -689,7 +689,7 @@ Then, the bundle can be built by invoking <*make*> from the <*HelloSensor1*> dir
     $ make
 ----
 
-After starting, or restarting the macchina.io server, the following log output should be
+After starting, or restarting the macchina.io EDGE server, the following log output should be
 visible:
 
     2018-02-21 09:48:49.655 [Information] osp.bundle.io.macchina.samples.sensor1<0>: Found 2 temperature sensors.
@@ -1077,7 +1077,7 @@ the Poco::OSP::ServiceFinder helper class:
 
 After obtaining the <[PreferencesService]> we look for an MQTTClient, which is also
 a service. In fact, multiple MQTT client services can be available, all configured
-in the main configuration file. The macchina.io default configuration file defines
+in the main configuration file. The macchina.io EDGE default configuration file defines
 a single client that connects to the public MQTT broker provided by Eclipse IoT.
 
     mqtt.clients.eclipse.serverURI = tcp://iot.eclipse.org:1883
